# tbmodel

./: LICENSE  best_model.pkl  pyproject.toml  readme.md
tbml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tbmodel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
