[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbmodel"
version = "1.0.0"
description = "Tuberculosis risk stratification machine learning pipeline"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "joblib"
]

[project.scripts]
tbmodel = "TUBERCULOSIS_EXPERIMENT.cli:main"